fixed header spacing issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,32 +1,3 @@
-#homeLink {
-	font-family: Courier;
-	font-size: 150%;
-	text-decoration: none;
-	color: #C1FFF2;
-	float: left;
-}
-
-#headerRight {
-	float: right;
-	margin-right: 30px;
-	height: 35px;
-	width: 200px;
-	text-align: center;
-}
-
-.rightLink {
-	font-size: 100%;
-	text-decoration: none;
-	color: #9DCFC4;
-	font-family: verdana;
-}
-
-/*
-.inlineLink {
-	color: #625D6A;
-}
-*/
-
 #header {
 	/*border: solid black 1px;*/
 	background: #7C7287;
@@ -46,32 +17,54 @@
 	position: fixed;
 	z-index: 1;
 }
+	#homeLink {
+		font-family: Courier;
+		font-size: 150%;
+		text-decoration: none;
+		color: #C1FFF2;
+		float: left;
+		margin-top: 0.2em;
+	}
 
-#breadcrumbNav {
-	left: 0;
-	margin-top: 25px;
-	padding-left: 20px;
-	width: 101%;
-	font-family: verdana;
-	font-size: 100%;
+	#headerRight {
+		float: right;
+		margin-right: 1.875em;
+		height: 2.25em;
+		width: 12.5em;
+		text-align: center;
+	}
 
-	position: fixed;
-	z-index: 1;
-	
-	background: #FFFFFF;
-}
+	.rightLink {
+		font-size: 100%;
+		text-decoration: none;
+		color: #9DCFC4;
+		font-family: verdana;
+	}
+	#breadcrumbNav {
+		left: 0;
+		margin-top: 25px;
+		padding-left: 20px;
+		width: 101%;
+		font-family: verdana;
+		font-size: 100%;
 
-.breadcrumbLink {
-	color: #625D6A;
-}
+		position: fixed;
+		z-index: 1;
+		
+		background: #FFFFFF;
+	}
 
-#spacingArea {
-	height: 60px;
-	
-	/* ---------------------------------------------------------------------------------
-		Disgusting filler code that technically works but should be replaced eventually
-		-------------------------------------------------------------------------------- */
-}
+	.breadcrumbLink {
+		color: #625D6A;
+	}
+
+	#spacingArea {
+		height: 60px;
+		
+		/* ---------------------------------------------------------------------------------
+			Disgusting filler code that technically works but should be replaced eventually
+			-------------------------------------------------------------------------------- */
+	}
 
 #contentArea {
 	top: 100;
